--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,37 +8,37 @@ license = "Apache-2.0"
 repository = "https://github.com/yourusername/coder-openapi"
 
 [dependencies]
+serde_yaml = "0.9"
 tokio = { version = "1.37", features = ["full"] }
-futures = "0.3.30"
-
-actix-web = "4.7.0"
-anyhow = "1.0.86"
-candle-core = "0.8.1"
+futures = "0.3"
+actix-web = "4.7"
+anyhow = "1.0"
+candle-core = "0.8"
 hf-hub = { version = "0.3", features = ["tokio"] }
 candle-nn = "0.8.1"
-chrono = { version = "0.4.38", features = ["serde"] }
-log = "0.4.21"
+chrono = { version = "0.4", features = ["serde"] }
+log = "0.4"
 log4rs = "1.3.0"
 reqwest = { version = "0.12", features = ["json"] }
-safetensors = "0.4.1"
-memmap2 = "0.9.3"
-serde = { version = "1.0.202", features = ["derive"] }
-serde_json = "1.0.117"
+safetensors = "0.4"
+memmap2 = "0.9"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "2.0"
-tokenizers = "0.21.0"
-uuid = { version = "1.8.0", features = ["v4", "serde"] }
-cargo-tarpaulin = { version = "0.31.0", optional = true }
-async-trait = "0.1.83"
-cargo-udeps = { version = "0.1.45", optional = true }
+tokenizers = "0.21"
+uuid = { version = "1.8", features = ["v4", "serde"] }
+cargo-tarpaulin = { version = "0.31", optional = true }
+async-trait = "0.1"
+cargo-udeps = { version = "0.1", optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
-actix-test = "0.1.0"
+actix-test = "0.1"
 mockall = "0.13"
 testcontainers = "0.23"
 flamegraph = "0.6"
 rustfmt = "0.10"
-clippy = "0.0.302"
+clippy = "0.0"
 
 [[bench]]
 name = "benchmarks"
