--- a/config/app.yml
+++ b/config/app.yml
@@ -1,18 +1,26 @@
+server:
+  host: "0.0.0.0"
+  port: 8080
+
+locales:
+  path: "locales"
+  default: "zh"
+
 models:
   yi-coder:
     hf_hub_id: "Yi-Coder-1.5B-Chat" # Hugging Face Hub模型ID
     model_files:
-      weights: 
+      weights:
         - "model.safetensors"
       config: "config.json"
       tokenizer: "tokenizer.model"
       tokenizer_config: "tokenizer_config.json"
       generation_config: "generation_config.json"
-  
+
   deepseek-coder:
     hf_hub_id: "DeepSeek-Coder-V2-Lite-Instruct" # Hugging Face Hub模型ID
     model_files:
-      weights: 
+      weights:
         - "model-00001-of-000004.safetensors"
         - "model-00002-of-000004.safetensors"
         - "model-00003-of-000004.safetensors"
