--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ uuid = { version = "1.8", features = ["v4", "serde"] }
 cargo-tarpaulin = { version = "0.31", optional = true }
 async-trait = "0.1"
 cargo-udeps = { version = "0.1", optional = true }
+winnow = "0.6"
+num_enum = "0.7"
+rand = "0.8.5"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
