--- a/config/app.yml
+++ b/config/app.yml
@@ -1,6 +1,17 @@
 server:
   host: "0.0.0.0"
   port: 8080
+  workers: 10
+
+models_cache_dir: "models_cache"
+
+chat:
+  defaults:
+    temperature: 0.7
+    top_p: 0.9
+    n: 1
+    max_tokens: 2048
+    stream: false
 
 locales:
   path: "locales"
@@ -8,7 +19,7 @@ locales:
 
 models:
   yi-coder:
-    hf_hub_id: "Yi-Coder-1.5B-Chat" # Hugging Face Hub模型ID
+    hf_hub_id: "01-ai/Yi-Coder-1.5B-Chat" # Hugging Face Hub模型ID
     model_files:
       weights:
         - "model.safetensors"
@@ -18,7 +29,7 @@ models:
       generation_config: "generation_config.json"
 
   deepseek-coder:
-    hf_hub_id: "DeepSeek-Coder-V2-Lite-Instruct" # Hugging Face Hub模型ID
+    hf_hub_id: "deepseek-ai/DeepSeek-Coder-V2-Lite-Instruct" # Hugging Face Hub模型ID
     model_files:
       weights:
         - "model-00001-of-000004.safetensors"
