--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ license = "Apache-2.0"
 repository = "https://github.com/yourusername/coder-openapi"
 
 [dependencies]
+derive_more = { version = "1.0.0", features = ["full"] }
+futures-util = "0.3"
+
 serde_yaml = "0.9"
 tokio = { version = "1.37", features = ["full"] }
 futures = "0.3"
