--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ license = "Apache-2.0"
 repository = "https://github.com/yourusername/coder-openapi"
 
 [dependencies]
+rust-i18n = "3"
 derive_more = { version = "1.0.0", features = ["full"] }
 futures-util = "0.3"
-
+serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 tokio = { version = "1.37", features = ["full"] }
 futures = "0.3"
@@ -25,7 +26,6 @@ log4rs = "1.3.0"
 reqwest = { version = "0.12", features = ["json"] }
 safetensors = "0.4"
 memmap2 = "0.9"
-serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
 tokenizers = "0.21"
@@ -35,7 +35,8 @@ async-trait = "0.1"
 cargo-udeps = { version = "0.1", optional = true }
 winnow = "0.6"
 num_enum = "0.7"
-rand = "0.8.5"
+rand = "0.8"
+
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
@@ -45,6 +46,7 @@ testcontainers = "0.23"
 flamegraph = "0.6"
 rustfmt = "0.10"
 clippy = "0.0"
+
 
 [[bench]]
 name = "benchmarks"
