--- a/config/app.yml
+++ b/config/app.yml
@@ -26,7 +26,7 @@ models:
         - "model.safetensors"
       config: "config.json"
       tokenizer: "tokenizer.model"
-      tokenizer_config: "tokenizer_config.json"
+      tokenizer_config: "tokenizer.json"
       generation_config: "generation_config.json"
 
   deepseek-coder:
