feat: add log datetime style

--- a/config/log4rs.yml
+++ b/config/log4rs.yml
@@ -4,14 +4,16 @@ appenders:
   stdout:
     kind: console
     encoder:
-      pattern: "{d(%Y-%m-%d %H:%M:%S)} {T} {M} {l} - {m}{n}"
+      kind: pattern
+      pattern: "{d(%Y-%m-%d %H:%M:%S %Z)} {T} {M} {h({l})} - {m}{n}"
+    target: stdout
 
   file:
     kind: rolling_file
     path: "logs/app.log"
     append: true
     encoder:
-      pattern: "{d(%Y-%m-%d %H:%M:%S)} {T} {M} {l} - {m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S %Z)} {T} {M} {l} - {m}{n}"
     policy:
       kind: compound
       trigger:
